# boni-learns-python-textual

./: pyproject.toml  setup.cfg
src/learn_textual/: __main__.py
tests/test_learn_textual/: test_main.py
