[project]
name = "boni-learns-python-textual"
version = "0.0.1"
description = "Figuring out how textual works."
requires-python = ">= 3.10"
license.text = "MIT"
dependencies = [
  "textual",
]

[[project.authors]]
name = "Boni Lindsley"
email = "boni@lindsley.xyz"

[project.optional-dependencies]
dev = [
  "black >= 22.3.0",
  "mypy >= 0.960",
  "pylint >= 2.13.9",
  "pytest >= 7.1.2",
]
